app/public/css/styles.css
html {
    max-width: 100vw;
}

.background {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    min-height: 100vh;
    background: url('friends1.jpg')no-repeat center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.jumbotron h1 {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: rgb(49, 49, 49);
}
.jumbotron h3 {
    font-size: 1.5rem;
    font-weight: 300;
}
.footer{    
        position: fixed;
        left: 0;
        bottom: 0;
        width: 100%;
        text-align: left;
        align-content: space-around;
}
.icons {
    font-size: 2rem;
    color: rgb(236, 236, 236);
    margin: .5rem;
}
.custom-select {
    max-width: 200px;
}
.sidePanels {
    min-height: 100vh;
    background: url('side.jpeg')no-repeat center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
   
}
 .backdrop{
    background-color:rgb(207, 207, 207, 0.5);
} 
.navbar-light .navbar-toggler {
    border: none;
}

